--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/5.2.0/mocha.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/4.2.0/chai.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sinon.js/7.2.3/sinon.js"></script>
+    <script src="esrever.js"></script>
     <!-- 🚫 🚫 🚫 🚫 🚫 Testing Dependencies. Do not edit! 🚫 🚫 🚫 🚫 🚫 -->
 
     <!-- ⬇ ⬇ ⬇ ⬇ ⬇ ⬇ ⬇ ⬇ Be sure to edit the script tag! ⬇ ⬇ ⬇ ⬇ ⬇ ⬇ ⬇ ⬇ -->
-    <script src="./oddsGreaterThan100/index.js"></script>
+    <script src="./chunk/index.js"></script>
     <!-- ⬆ ⬆ ⬆ ⬆ ⬆ ⬆ ⬆ ⬆ Be sure to edit the script tag! ⬆ ⬆ ⬆ ⬆ ⬆ ⬆ ⬆ ⬆ -->
   </body>
 </html>
